# inbox-classifier

./: .gitignore  LICENSE  README.md  com.user.inbox-classifier.plist.template  pyproject.toml  requirements.txt  rules.md.example  run_tests.sh
docs/: launchd-setup.md  setup-gmail.md  usage.md
docs/plans/: 2026-02-13-remote-rules-design.md  2026-02-13-remote-rules-plan.md
inbox_classifier/: ai_classifier.py  email_fetcher.py  email_labeler.py  gmail_auth.py  gmail_labels.py  logger.py  main.py  rules_loader.py  skip_rules.py
tests/: integration_test.md  test_ai_classifier.py  test_email_fetcher.py  test_email_labeler.py  test_gmail_auth.py  test_gmail_auth_unit.py  test_gmail_labels.py  test_logger.py  test_main.py  test_rules_loader.py  test_skip_rules.py
